apps/app-proxy/overlays/cf-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: cf-local-cap-app-proxy
  namespace: cf-local
spec:
  rules:
  - host: alexs-ingresshost.ngrok.io
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: Prefix
status:
  loadBalancer: {}
